# rotuli

./: .gitignore  Cargo.toml  LICENSE  README.rst  archive-en.html  blogpost.txt  design.rst  list-per-date.rst  plan.rst  rstrender.py
docs/: templates.rst
sample-source/: archive.rst  arkisto.rst  category.rst  eng.rst  index.rst  kategoria.rst  page.with.dots.rst  peruna.rst  posts.rst  potato.rst  random.rst  random2.rst  rss-eng.xml.rst  rss.xml.rst  woof.rst
sample-source/2016/: index.rst
sample-source/2016/9/14/: test-commit.rst  test-commit2.rst  test-uncategorized.rst  testi-draft.rst  testi-kategorioimaton.rst  testi.rst
sample-source/2020/: index.rst
sample-source/2020/07/19/: test-uncategorized.rst
sample-source/category/: animals.rst  meta.rst  multi-worded-category.rst
sample-source/kategoria/: elukat.rst  index.rst  kielitesti_ja_monta_kategoriaa.rst
sample-templates/: allpages-en.html  allpages-fi.html  base-en.html  base-fi.html  base.html  base_macros.html  blog-en.html  blog-fi.html  blog_macros.html  categories-en.html  categories-fi.html  category-en.html  category-fi.html  index-en.html  index-fi.html  index_macros.html  page-en.html  page-fi.html  post-en.html  post-fi.html  year-en.html
src/: main.rs
templates/: archive-en.html  archive-fi.html  base-fi.html  base.html  categories-en.html  categories-fi.html  post-en.html  post-fi.html  postpreview-en.html  postpreview-fi.html  posts-en.html  posts-fi.html  rss.html
templates2/: base-en.html  base.html  post-en.html  post-fi.html
