[package]
name = "rotuli"
version = "0.0.1"
authors = ["Konsta Hölttä <sooda@iki.fi>"]
description = "the most universal content processor for static websites and the like"
repository = "https://github.com/sooda/rotuli"
license = "MIT"
keywords = ["blog", "website", "generator"]
categories = ["command-line-utilities"]

[dependencies]
glob = "0.3"
serde_yaml = "0.8"
tera = "1.3"
# same as tera
serde = { version = "1.0", features = ["derive"] }
regex = "1.3"
rst_parser = "0.3"
rst_renderer = "0.3"
document_tree = "0.3"
structopt = "0.3"
